Modifications to API ( Measure API)
