# controllers/Command.js
@@ -6,7 +6,8 @@ var Command = require('../service/CommandService');
 module.exports.getComnmands = function getComnmands (req, res, next) {
   var deviceId = req.swagger.params['deviceId'].value;
   var value = req.swagger.params['value'].value;
-  Command.getComnmands(deviceId,value)
+  var sensorName = req.swagger.params['sensorName'].value;
+  Command.getComnmands(deviceId,sensorName,value)
     .then(function (response) {
       utils.writeJson(res, response);
     })
